renaming all classes

--- a/src/css/base/text.css
+++ b/src/css/base/text.css
@@ -1,99 +1,97 @@
-.ao {
-  &-heading {
-    &-1,
-    &-2 {
-      @apply font-roboto font-light;
-    }
-
-    &-1 {
-      font-size: toRem(96);
-      letter-spacing: letterSpace(-1.5);
-    }
-
-    &-2 {
-      font-size: toRem(60);
-      letter-spacing: letterSpace(-0.5);
-    }
-
-    &-3,
-    &-4,
-    &-5 {
-      @apply font-roboto font-normal;
-    }
-
-    &-3 {
-      font-size: toRem(48);
-      letter-spacing: 0;
-    }
-
-    &-4 {
-      font-size: toRem(34);
-      letter-spacing: letterSpace(0.25);
-    }
-
-    &-5 {
-      font-size: toRem(24);
-      letter-spacing: 0;
-    }
-
-    &-6 {
-      @apply font-roboto font-medium;
-      font-size: toRem(20);
-      letter-spacing: letterSpace(0.15);
-    }
+.heading {
+  &-1,
+  &-2 {
+    @apply font-roboto font-light;
   }
 
-  &-sub {
-    &-1,
-    &-2 {
-      @apply font-roboto;
-    }
-
-    &-1 {
-      @apply font-normal;
-      font-size: toRem(16);
-      letter-spacing: letterSpace(0.15);
-    }
-
-    &-2 {
-      @apply font-medium;
-      font-size: toRem(14);
-      letter-spacing: letterSpace(0.1);
-    }
+  &-1 {
+    font-size: toRem(96);
+    letter-spacing: letterSpace(-1.5);
   }
 
-  &-body {
-    &-1,
-    &-2 {
-      @apply font-roboto font-normal;
-    }
-
-    &-1 {
-      font-size: toRem(16);
-      letter-spacing: letterSpace(0.5);
-    }
-
-    &-2 {
-      font-size: toRem(14);
-      letter-spacing: letterSpace(0.25);
-    }
+  &-2 {
+    font-size: toRem(60);
+    letter-spacing: letterSpace(-0.5);
   }
 
-  &-button {
-    @apply font-roboto font-medium uppercase;
-    font-size: toRem(14);
-    letter-spacing: letterSpace(1.25);
-  }
-
-  &-caption {
+  &-3,
+  &-4,
+  &-5 {
     @apply font-roboto font-normal;
-    font-size: toRem(12);
-    letter-spacing: letterSpace(0.4);
   }
 
-  &-overline {
-    @apply font-roboto font-medium uppercase;
-    font-size: toRem(10);
-    letter-spacing: letterSpace(1.5);
+  &-3 {
+    font-size: toRem(48);
+    letter-spacing: 0;
   }
+
+  &-4 {
+    font-size: toRem(34);
+    letter-spacing: letterSpace(0.25);
+  }
+
+  &-5 {
+    font-size: toRem(24);
+    letter-spacing: 0;
+  }
+
+  &-6 {
+    @apply font-roboto font-medium;
+    font-size: toRem(20);
+    letter-spacing: letterSpace(0.15);
+  }
+}
+
+.sub {
+  &-1,
+  &-2 {
+    @apply font-roboto;
+  }
+
+  &-1 {
+    @apply font-normal;
+    font-size: toRem(16);
+    letter-spacing: letterSpace(0.15);
+  }
+
+  &-2 {
+    @apply font-medium;
+    font-size: toRem(14);
+    letter-spacing: letterSpace(0.1);
+  }
+}
+
+.text-body {
+  &-1,
+  &-2 {
+    @apply font-roboto font-normal;
+  }
+
+  &-1 {
+    font-size: toRem(16);
+    letter-spacing: letterSpace(0.5);
+  }
+
+  &-2 {
+    font-size: toRem(14);
+    letter-spacing: letterSpace(0.25);
+  }
+}
+
+.button {
+  @apply font-roboto font-medium uppercase;
+  font-size: toRem(14);
+  letter-spacing: letterSpace(1.25);
+}
+
+.caption {
+  @apply font-roboto font-normal;
+  font-size: toRem(12);
+  letter-spacing: letterSpace(0.4);
+}
+
+.overline {
+  @apply font-roboto font-medium uppercase;
+  font-size: toRem(10);
+  letter-spacing: letterSpace(1.5);
 }
