--- a/src/css/widget/list.css
+++ b/src/css/widget/list.css
@@ -75,3 +75,30 @@
     margin-left: toRem(-16);
   }
 }
+
+.list-item.tablet-grid {
+  @apply p-0;
+
+  & .img.img-xl {
+    @apply ml-0 mt-0 w-auto;
+    height: toRem(88);
+  }
+
+  & .text {
+    @apply my-8;
+  }
+}
+
+@screen tablet {
+  .list-item.tablet-grid {
+    @apply flex-col p-0;
+
+    & .img.img-xl {
+      @apply mr-0 w-full h-auto;
+    }
+
+    & .text {
+      @apply self-auto m-16;
+    }
+  }
+}
