removing usage of reset css/tailwind base

--- a/src/css/layout/layout.css
+++ b/src/css/layout/layout.css
@@ -1,9 +1,14 @@
-.body {
+body {
+  @apply m-0;
   background: color(background);
 }
 
 .container {
   @apply p-16 mx-auto;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 @screen laptop {
