--- a/src/css/widget/card.css
+++ b/src/css/widget/card.css
@@ -1,5 +1,5 @@
 .card {
-  @apply flex flex-col rounded-4 elevation-1;
+  @apply flex flex-col rounded-4 elevation-1 cursor-pointer;
   background-color: color(surface);
   color: color(in-surface);
 
