--- a/src/css/widget/selection/base.css
+++ b/src/css/widget/selection/base.css
@@ -5,7 +5,7 @@
 
   & > input,
   & > label::before {
-    @apply w-20 h-20 left-0 top-0 cursor-pointer;
+    @apply w-20 h-20 left-0 top-0 m-0 cursor-pointer;
   }
 
   & > input {
