--- a/src/css/widget/tab.css
+++ b/src/css/widget/tab.css
@@ -1,5 +1,5 @@
 .tab {
-  @apply w-full h-48 list-none select-none;
+  @apply w-full h-48 m-0 p-0 list-none select-none;
   @apply flex flex-row;
   background: color(primary);
 }
